platforms/gke/base/use-cases/federated-learning/terraform/example_nvidia_flare_tff/templates/nvidia-flare-tff-example/nvidia_flare_tff_example_service_entries_server.yaml
# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

---
# Add Cloud Storage Google APIs endpoints to the service registry
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: storage-googleapis-com
  namespace: istio-system
  labels:
    # Show this service and its telemetry in the Anthos Service Mesh page of the Google Cloud console
    service.istio.io/canonical-name: googleapis.com
spec:
  hosts:
    - storage.googleapis.com
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: tls
      protocol: TLS
  resolution: DNS
  location: MESH_EXTERNAL
