platforms/gke/base/use-cases/federated-learning/terraform/example_nvidia_flare_tff/templates/nvidia-flare-tff-example/nvidia_flare_tff_example_virtual_services_server.yaml
# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
---
# Direct traffic from the ingress gateway to the server
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ingress-gateway-nvflare-to-${nvidia_flare_tff_example_workload_name}
  namespace: istio-ingress
spec:
  gateways:
    - istio-ingress/ingress-gateway-nvflare
  hosts:
    - "*"
  tcp:
    - match:
        - port: 8002
      route:
        - destination:
            host: ${nvidia_flare_tff_example_workload_name}.${namespace_name}.svc.cluster.local
            port:
              number: 8002
          weight: 100
    - match:
        - port: 8003
      route:
        - destination:
            host: ${nvidia_flare_tff_example_workload_name}.${namespace_name}.svc.cluster.local
            port:
              number: 8003
          weight: 100
