platforms/gke/base/use-cases/federated-learning/terraform/example_nvidia_flare_tff/templates/nvidia-flare-tff-example/nvidia_flare_tff_example_authorization_policies.yaml
# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
%{ if startswith(nvidia_flare_tff_example_workload_name, "server") }
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-ingress-from-${namespace_name}-to-egress-gateway
  namespace: istio-egress
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces:
              - ${namespace_name}
%{ endif }
%{ if startswith(nvidia_flare_tff_example_workload_name, "client") }
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-from-ingress-gateway-to-flport-port
  namespace: ${namespace_name}
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces:
              - "istio-ingress"
    - to:
        - operation:
            ports: ["8002"]
  selector:
    matchLabels:
      app: tff-worker
%{ endif }
