platforms/gke/base/use-cases/federated-learning/terraform/example_nvidia_flare_tff/templates/nvidia-flare-tff-example/nvidia_flare_tff_example_gateway.yaml
# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
%{ if startswith(nvidia_flare_tff_example_workload_name, "server") }
---
# Expose additional ports for NVFLARE
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway-nvflare
  namespace: istio-ingress
spec:
  type: LoadBalancer
  selector:
    istio: ingressgateway
    app: istio-ingressgateway
  ports:
    - port: 8002
      protocol: TCP
      targetPort: 8002
      name: flport
    - port: 8003
      protocol: TCP
      targetPort: 8003
      name: adminport
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-gateway-nvflare
  namespace: istio-ingress
spec:
  podSelector:
    matchLabels:
      istio: ingressgateway
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 8002
        - protocol: TCP
          port: 8003
---
# Create a service mesh gateway
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: ingress-gateway-nvflare
  namespace: istio-ingress
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 8002
        name: flport
        protocol: TCP
      hosts:
        - "*"
    - port:
        number: 8003
        name: adminport
        protocol: TCP
      hosts:
        - "*"
---
# Allow traffic to NVFLARE ports
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-ingress-to-ingressgateway-nvflare
  namespace: istio-ingress
spec:
  action: ALLOW
  selector:
    matchLabels:
      istio: ingressgateway
  rules:
    - to:
        - operation:
            ports:
              - "8002"
              - "8003"
%{ endif }
