platforms/gke/base/use-cases/federated-learning/terraform/example_nvidia_flare_tff/templates/nvidia-flare-tff-example/nvidia_flare_tff_example_workaournd_listener_issue_server.yaml
# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

---
# Expose NVFLARE using a load balancer as a workaround to the TCP listener
# issue on the ingress gateway.
# Remove this service after the issue is resolved, and use the ingress gateway
# to direct traffic to nvflare-${nvidia_flare_tff_example_workload_name}.
apiVersion: v1
kind: Service
metadata:
  name: nvflare-${nvidia_flare_tff_example_workload_name}-lb
  namespace: ${namespace_name}
  labels:
    run: nvflare-${nvidia_flare_tff_example_workload_name}
spec:
  ports:
    - port: 8002
      protocol: TCP
      targetPort: 8002
      name: flport
    - port: 8003
      protocol: TCP
      targetPort: 8003
      name: adminport
  selector:
    run: nvflare-${nvidia_flare_tff_example_workload_name}
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-${nvidia_flare_tff_example_workload_name}
  namespace: ${namespace_name}
spec:
  podSelector:
    matchLabels:
      run: nvflare-${nvidia_flare_tff_example_workload_name}
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 8002
        - protocol: TCP
          port: 8003
